# bsiCPP

./: .gitignore  BsiAttribute.cpp  BsiAttribute.hpp  BsiSigned.cpp  BsiSigned.hpp  BsiUnsigned.cpp  BsiUnsigned.hpp  CMakeLists.txt  LICENSE  build_cuda_dot.sh  build_fixed.sh  example  example_add  example_corrected  test1
bsi/: BsiAttribute.cpp  BsiAttribute.hpp  BsiSigned.cpp  BsiSigned.hpp  BsiUnsigned.cpp  BsiUnsigned.hpp  BsiVector.cpp  BsiVector.hpp  CMakeLists.txt  bsi_util_cuda.hpp
bsi/hybridBitmap/: boolarray.h  bsi_dot_cuda.cpp  bsi_dot_cuda.cu  bsi_dot_cuda.h  bsi_dot_cuda_wrapper.cpp  bsi_dot_cuda_wrapper.h  hybridbitmap.h  hybridbitmap_cuda.cu  hybridbitmap_cuda.hpp  hybridbitmap_cuda_wrapper.cpp  hybridbitmap_cuda_wrapper.h  runninglengthword.h  unit.cpp  vector_dot_cuda.cu
examples/: CMakeLists.txt  Help.txt  PerformanceVis.py  RandomBSIGeneration.cpp  add_benchmark.cpp  bsi_dot_benchmark.cpp  div.cpp  division_test.cpp  divison_test_new.cpp  dot_benchmark.cpp  example  example.cpp  example_add.cpp  example_corrected  example_corrected.cpp  example_multiply.cpp  fastzipf_generated_vector  multiply_benchmark.cpp  newton_raphson_div.cpp  rows100_skew1_card16_neg  rows100k_skew1_card16_neg  rows10k_skew0.5_card16_neg  rows10k_skew0_card16_neg  rows10k_skew1.5_card16_neg  rows10k_skew1_card16_neg  rows10k_skew1_card4_neg  rows10k_skew1_card8_neg  rows10k_skew2_card16_neg  rows1k_skew1_card16_neg  signed_testcase  test.cpp  test1.cpp  testBSI.h  testBSI.hpp  testBSIAttributeBuilding.cpp  testBSIAttributeBuilding.h  testBsiSigned.cpp  testBsiSigned.h  testHorizontalDotProduct.cpp  testHorizontalDotProduct.h  (+3 more)
examples/zipf_testRuns/: zipf_10k.cpp  zipf_10k_plot.py  zipf_1M.cpp
examples/zipf_testRuns/rows_skew3_card16/: skew3_data_generation.py
examples/zipf_testRuns/zipf_100_to_10M_skew1/: zipf_100_10M_skew1.cpp
examples/zipf_testRuns/zipf_100_to_10M_skew3/: zipf_100_10M_plot_skew3.py  zipf_100_10M_skew3.cpp
examples/zipf_testRuns/zipf_100_to_1M/: zipf_100_1M.cpp  zipf_100_1M_plot.py
examples/zipf_testRuns/zipf_p25_p3_data_generation/: zipf_25_3_data_generation.py
hybridBitmap/: CMakeLists.txt  UnitTestsOfHybridBitmap.hpp  boolarray.h  hybridbitmap.cpp  hybridbitmap.h  runninglengthword.h
include/bsi/: BsiUnsigned.hpp
include/hybridBitmap/: benchmark.cpp  hybridbitmap.h
